Fix nav display on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -153,6 +153,7 @@ main {
 .content-container {
   width: 100%;
   position: relative;
+  display: block;
 }
 
 .task {
